--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-react": "^9.5.0",
+    "@headlessui/react": "^2.2.2",
     "@tanstack/react-table": "^8.21.2",
     "apexcharts": "^4.5.0",
     "react": "^19.0.0",
